2007-05-15  David Moore  <dcm@acm.org>

	* libiptcdata/iptc-jpeg.c: Store APP13 section closer to the start of
	the file, necessary for Picasa compatability.
	* iptc/main.c: Don't set version and encoding by default since it hurts
	Picasa compatability.  Added two options to set them manually.
	* python/pyiptcdata.c: Don't set version and encoding by default.
	* Documentation updates for these new recommendations

2007-03-23  David Moore  <dcm@acm.org>

	* NEWS, configure.in: Updated for release of 1.0.1
	* python/pyiptcdatamod.c: Fixed buffer overflow
	* python/Makefile.am: added -avoid-version argument to libtool
	* README: converted from ISO-8859-1 to UTF-8
	* configure.in: fixed build on systems without Python
	* libiptcdata.spec.in: More updates for Fedora guidelines

2007-03-21  David Moore  <dcm@acm.org>

	* NEWS, configure.in: Updated for release of 1.0.0.
	* libiptcdata.spec.in: Spec file adjusted for Fedora guidelines
	* win/stdint.h: Updated windows stdint.h per suggestion from
	Michael Dillon.

2007-02-21  David Moore  <dcm@acm.org>

	* docs/reference/Makefile.am: fix missing doc files in 'make dist'

2007-02-08  David Moore  <dcm@acm.org>

	* Fixed python typo (from Ian Wienand)

2007-01-28  David Moore  <dcm@acm.org>

	* Added python wrapper, courtesy of Ian Wienand.
	* Fixed compile warnings in python wrapper.
	* Added libiptcdata-python package to spec file.

2007-01-27  David Moore  <dcm@acm.org>

	* iptc/Makefile.am, INSTALL: Compile fix for when gettext is in libintl
	instead of libc, as is often the case for Mac OS (reported by Mark
	Hunte).

2006-10-24  David Moore  <dcm@acm.org>

	* libiptcdata.ebuild: Added Gentoo ebuild file, courtesy of Dirk Göttel.

2006-05-23  David Moore  <dcm@acm.org>

	* iptc-data.c: Changed fopen() to use "rb" instead of "r" for windows
	compatability.  Noticed by Ralph Heidelberg.

2006-04-12  David Moore  <dcm@acm.org>

	* libiptcdata.spec.in: Fixed spec file to remove errors under Fedora
	Core 5.
